# prox-deck

./: .gitignore  README.md  main.py  proxdeck.spec  pyproject.toml
docs/: CodeStyle.md  edge_dashboard_codex_prompt.txt  edge_dashboard_product_requirements.txt  edge_dashboard_technical_architecture.txt  release.md
installable_widgets/community-browser/: manifest.json
installer/: proxdeck.iss
scripts/: build-release.ps1
src/proxdeck/: __init__.py  __main__.py
src/proxdeck/application/: __init__.py
tests/: test_bootstrap_settings.py  test_clock_widget_host.py  test_configuration_window.py  test_launcher_widget_host.py  test_layout_policy.py  test_management_launcher_configuration.py  test_management_screen_availability.py  test_management_visual_builder.py  test_management_widget_definition_metadata.py  test_media_controls_widget_host.py  test_notes_widget_host.py  test_runtime_target_detector.py  test_runtime_window_modes.py  test_screen_service.py  test_stream_deck_services.py  test_system_stats_widget_host.py  test_tray_icon_asset.py  test_tray_screen_menu.py  test_visual_builder_interaction_flags.py  test_web_widget_host.py  test_widget_definition_metadata.py  test_widget_discovery.py  test_widget_management_service.py  test_widget_placement_finder.py  test_windows_media_session_reader.py
widgets/clock/: manifest.json
widgets/launcher/: manifest.json
widgets/media-controls/: manifest.json
widgets/notes/: manifest.json
widgets/stream-deck/: manifest.json
widgets/system-stats/: manifest.json
widgets/web/: manifest.json
(+76 files in other folders)
