[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prox-deck"
version = "0.1.0"
description = "Prox Deck runtime foundation for the Corsair Xeneon Edge."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
